--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
     <h1">gogogogogogogogo</h1>
+        <button onclick="window.location.href='JestonNano-YOLOv5_pytorch.html'" type="button" id="add">Jeston Nano 部署 yolov5</button>
 </body>
 </html>
